* Signature gap in IE6/7 (ie6.css, ie7.css) [Bug 3194]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8325 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/ie6.css
+++ b/Themes/default/css/ie6.css
@@ -37,3 +37,8 @@
 {
 	margin-top: 10px;
 }
+#profileview #basicinfo .content
+{
+    padding: 0.7em 0 0 0.7em;
+	height: 100%;
+}
