--- a/Themes/default/css/ie7.css
+++ b/Themes/default/css/ie7.css
@@ -1,1 +1,6 @@
 /* special styles for IE7 */
+#profileview #basicinfo .content
+{
+    padding: 0.7em 0 0 0.7em;
+	height: 100%;
+}
